Добавлена поддержка звука, GUI-Sound.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@
 * Слияние с основной веткой LinuxDC++ r311.
 * Исправлена ошибка сборки 'mo' файлов. Обновил Readme.txt (добавлен пункт Uninstalling).
 * Добавлен предпросмотр файлов, GUI-Preview (часть кода взято из StrongDC++).
+* Добавлена поддержка звука, GUI-Sound.
 
 *** 0.0.1 2009-07-10 ***
 * За основу взят DC++ клиент LinuxDC++ ревизия 294.
