Обновил Changelog.txt

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,30 @@
-*** 0.0.X 2009-XX-XX ***
-* Слияние с основной веткой LinuxDC++ r311.
-* Исправлена ошибка сборки 'mo' файлов. Обновил Readme.txt (добавлен пункт Uninstalling).
-* Добавлен предпросмотр файлов, GUI-Preview (часть кода взято из StrongDC++).
-* Добавлена поддержка звука, GUI-Sound.
+--- 0.0.2 2010-XX-XX ---
+* Обновление libdcpp (0.75).
+* Новые команды: /freedcpp, /fuser, /removefu, /listfu, /emoticons.
+* Поддержка смайликов в чате и ЛС.
+* Перехват внешних хаб-ссылок, магнет-ссылок.
+* Свёртка магнет-ссылок в тексте чата и ЛС.
+* Поддержка тем.
+* Всплывающие уведомления.
+* Поддержка звука (звуковые уведомления).
+* Новые иконки юзеров.
+* Поддержка избранных пользователей (нет gui для управления фаворитами).
+* Выделение цветом фаворитов в юзер-списке, сортировка.
+* Новые кнопки (показать/спрятать): юзер-список и трансфер-панель.
+* Анимация статус-иконки, когда получено ЛС.
+* Новые вкладки (Настройки): Предпросмотр, Звуки, Цвета и Шрифты, Уведомления, Темы, Панель инструментов.
+* Сворачивание программы в треи, когда нажата кнопка закрытия окна.
+* Быстрая вставка ника(ников) в строку ввода (двойной щелчок по нику в тексте чата).
+* Новый логотип.
+* Поддержка цвета, стиля текста в чате и ЛС.
+* Предпросмотр файлов.
+* Обновил перевод Russian(ru).
+* Исправление ошибок.
+* Изменения от linuxdcpp (ревизии): 295-311, 316, 318-327, 329-332, 334, 338-340, 344-346.
 
-*** 0.0.1 2009-07-10 ***
-* За основу взят DC++ клиент LinuxDC++ ревизия 294.
+--- 0.0.1 2009-07-10 ---
+* За основу взят клиент LinuxDC++ ревизия 294.
 * Программа сменила имя на FreeDC++.
 * Русификация GUI (спасибо всем переводчикам: dcplusplus, FlylinkDC++).
+
+*** Полную информации смотрите в Changelog-svn.txt
