--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -27,4 +27,4 @@
 * Программа сменила имя на FreeDC++.
 * Русификация GUI (спасибо всем переводчикам: dcplusplus, FlylinkDC++).
 
-*** Полную информации смотрите в Changelog-svn.txt
+*** Полную информацию смотрите в Changelog-svn.txt
