--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,3 +1,23 @@
+--- 0.0.3 2010-10-06 ---
+* ADL поиск.
+* Иконка на вкладках.
+* Меню команд (быстрая вставка команды в строку ввода).
+* Новый магнет диалог (возможность выбора действия (добавить в очередь, найти).
+* Поисковый шпион.
+* Новые опции:
+  Команда /password вместо пароль-диалога (хаб),
+  Быстрый метод хеширования,
+  ЛС при двойном клике в списке пользователей.
+* Магнет Выбор.
+* Избранные пользователи (UI).
+* Новая вкладка (Настройки) Поисковый шпион.
+* Добавлен .desktop файл.
+* ЛС при двойном клике в списке пользователей.
+* Исправление ошибок.
+* Обновил перевод Russian(ru).
+* Изменения от linuxdcpp (ревизии): 349-350, 351-352, 355.
+* Разные мелочи смотрите в changelog-svn.txt
+
 --- 0.0.2 2010-03-31 ---
 * Обновление libdcpp (0.75).
 * Новые команды: /freedcpp, /fuser, /removefu, /listfu, /emoticons.
