--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,14 +1,30 @@
+--- 0.0.4 2010-12-04 ---
+* Новые возможности панели инструментов:
+  размещение панели слева,
+  скрывать панель,
+  уменьшение иконок на панели,
+  добавлена кнопка с меню хабов.
+* Поддержка в чате bbCode:
+  наклонный текст,
+  жирный текст,
+  подчёркнутый текст,
+  картинки.
+* Добавлены кнопки для быстрого ввода bbCode (выделенный текст в строке ввода размечает автоматически).
+* Новая команда /limitimg - влючение автоматической закачки картинок,
+  полезна в случае выхода юзеров из чата.
+* В настройках на вкладке "Шара" добавлена кнопка "Картинки" - расшаривает
+  скаченные файлы картинок.
+* В меню браузера файл-листов добавлен пункт "Копировать картинку".
+* Обновил перевод Russian(ru).
+
 --- 0.0.3 2010-10-06 ---
 * ADL поиск.
 * Иконка на вкладках.
 * Меню команд (быстрая вставка команды в строку ввода).
-* Новый магнет диалог (возможность выбора действия (добавить в очередь, найти).
+* Новый магнет диалог (возможность выбора действия: добавить в очередь, найти).
 * Поисковый шпион.
-* Новые опции:
-  Команда /password вместо пароль-диалога (хаб),
-  Быстрый метод хеширования,
-  ЛС при двойном клике в списке пользователей.
-* Магнет Выбор.
+* Команда /password вместо пароль-диалога.
+* Быстрый метод хеширования.
 * Избранные пользователи (UI).
 * Новая вкладка (Настройки) Поисковый шпион.
 * Добавлен .desktop файл.
@@ -16,7 +32,7 @@
 * Исправление ошибок.
 * Обновил перевод Russian(ru).
 * Изменения от linuxdcpp (ревизии): 349-350, 351-352, 355.
-* Разные мелочи смотрите в changelog-svn.txt
+* Разные мелочи.
 
 --- 0.0.2 2010-03-31 ---
 * Обновление libdcpp (0.75).
