--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,3 +1,13 @@
+--- 0.0.5 2011-03-16 ---
+* Новое ядро 0.770.
+* Добавлен менеджер групп для избранных хабов.
+* Ограничение скорости.
+* Остановка хеширования.
+* Возможность добавлять или редактировать поиск-типы.
+* Возможность отображать в списке закачек только завершённые файлы.
+* Обновил перевод Russian(ru).
+* Исправление ошибок.
+
 --- 0.0.4 2010-12-04 ---
 * Новые возможности панели инструментов:
   размещение панели слева,
