--- a/linux/po/freedcpp.pot
+++ b/linux/po/freedcpp.pot
@@ -2942,7 +2942,7 @@ msgid "Use TLS when remote client supports it"
 msgstr ""
 
 #: settingsdialog.glade:219
-msgid "Use UPnP to let client cofigure my router"
+msgid "Use UPnP to let client configure my router"
 msgstr ""
 
 #: mainwindow.glade:1451
