--- a/linux/po/ru.po
+++ b/linux/po/ru.po
@@ -3055,7 +3055,7 @@ msgid "Use TLS when remote client supports it"
 msgstr "Использовать TLS, когда это поддерживает удаленный клиент"
 
 #: settingsdialog.glade:219
-msgid "Use UPnP to let client cofigure my router"
+msgid "Use UPnP to let client configure my router"
 msgstr "Использовать UPnP"
 
 #: mainwindow.glade:1451
