--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,8 @@
 * Core: fix build with GCC 8.x.
 * Core: add compatibility with OpenSSL >= 1.1.0.
 * Core: add support of TLS 1.2.
+* Core: remove Coral CDN support, since it's stopped running.
+* Core: support of downloading hub lists via https.
 * Core: update list of hub list servers.
 * GUI: update homepage URL.
 * Update desktop file.
