--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,8 @@
 * Fix segfault when user is trying to register user command which name is
   already exists.
 * Fix opening of hub from favorites hubs list by [Enter] key from keyboard.
+* Delete embedded copy of miniupnpc library: it was extremely outdated and
+  system library should be used in any case.
 * Core: fix build with GCC 8.x.
 * Core: fix some compilation warnings in builds with GCC >= 6.x.
 * Core: add compatibility with OpenSSL >= 1.1.0.
