--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+--- 0.1.1 2020-xx-xx ---
+* Rewrite sound notification system from libgnome to libcanberra.
+
 --- 0.1.0 2019-03-21 ---
 * Old project on Google Code is dead. Passive development of this project will
   be continued at new location: https://github.com/eiskaltdcpp/freedcpp
