--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+--- 0.1.2 2020-xx-xx ---
+* Port SConstruct to python 3.x.
+
 --- 0.1.1 2020-01-17 ---
 * Rewrite sound notification system from libgnome to libcanberra.
 
